--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/">
     <meta charset="utf-8">
-    <title>MarkLogic Reports</title>
+    <title>Analytics Dashboard</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="/styles/custom.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="app">
+  <body ng-app="app" ng-controller="SidebarCtrl">
     <div id="loader"></div>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
@@ -34,12 +34,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">MarkLogic Reports</a>
+          <a class="navbar-brand" href="/">Analytics Dashboard</a>
         </div>
         <div class="collapse navbar-collapse" id="mlr-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/reports">My Reports</a></li>
-            <li><a href="/report">New Report</a></li>
+            <li><a href="/newreport">New Report</a></li>
             <li><a href="/indexes">Indexes</a></li>
 <!--
             <li><a href="/query-options">Query Options</a></li>
@@ -61,7 +60,7 @@
         <div class="left-column">
           <div class="sidebar-container-outer">
             <div id="sidebar-container">
-              <div id="sidebar" ng-controller="SidebarCtrl">
+              <div id="sidebar">
                 <span class="menu-title">My Reports</span>
                 <p ng-show="!user.authenticated" style="padding-left:8px;">Please log in to view reports.</p>
                 <div class="alert alert-warning" ng-show="showLoading">Loading Reports...</div>
@@ -74,9 +73,19 @@
                   <div class="report-container">
                     <div class="report-container-inner">
                       <div class="report-item" 
-                           ng-repeat="report in reports | filter : search"
-                           ng-click="gotoDashboard(report.uri)">
+                           ng-repeat="report in reports | filter : search">
                         <i class="fa fa-th"></i><span>{{report.name}}</span>
+                        <div class="toolbar">
+                          <a class="btn btn-link" data-ng-click="gotoDashboard(report.uri)">
+                            <i class="fa fa-dashboard"></i>
+                          </a>
+                          <a class="btn btn-link" data-ng-click="showReportEditor(report)">
+                            <i class="fa fa-edit"></i>
+                          </a>
+                          <a class="btn btn-link" data-ng-click="showReportRemover(report)">
+                            <i class="fa fa-trash-o"></i>
+                          </a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -112,6 +121,8 @@
         <img src="/images/marklogic-powered-by.png" class="pull-right" style="margin-top:5px;" />
       </div>
     </footer>
+
+<div data-ng-include src="'includes/reports.html'"></div>
 
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/jquery/jquery.js"></script>
